--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,9 @@ spring.jpa.properties.hibernate.show_sql=true
 ##### You need to enable SSL on port 465 instead of 587, For Normal setting change 465 back to 587 and comment out the last line "SSL.enable=true"
 spring.mail.host=smtp.gmail.com
 spring.mail.port=465
-spring.mail.username=omojolawarith@gmail.com
-spring.mail.password=ooiwbfydmkvxnyyh
+spring.mail.username=*****Your email address*******
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.ssl.enable=true
 
-
+####ooiwbfydmkvxnyyh#########################
